--- a/src/Components/UI/Spinner/index.module.css
+++ b/src/Components/UI/Spinner/index.module.css
@@ -1,59 +1,21 @@
-.Loader,
-.Loader:before,
-.Loader:after {
-  background: #ffffff;
-  -webkit-animation: load1 1s infinite ease-in-out;
-  animation: load1 1s infinite ease-in-out;
-  width: 1em;
-  height: 4em;
+.Spinner {
+	border: 2px solid #e27b36;
+	box-sizing: border-box;
+	border-radius: 50%;
+	border-top-width: 0px;
+	border-left-width: 0px;
+	width: 50px;
+	height: 50px;
+
+	margin: 0 auto;
+	animation: rotate 1s linear infinite;
 }
-.Loader {
-  color: chocolate;
-  text-indent: -9999em;
-  margin: 88px auto;
-  position: relative;
-  font-size: 11px;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation-delay: -0.16s;
-  animation-delay: -0.16s;
-}
-.Loader:before,
-.Loader:after {
-  position: absolute;
-  top: 0;
-  content: '';
-}
-.Loader:before {
-  left: -1.5em;
-  -webkit-animation-delay: -0.32s;
-  animation-delay: -0.32s;
-}
-.Loader:after {
-  left: 1.5em;
-}
-@-webkit-keyframes load1 {
-  0%,
-  80%,
-  100% {
-    box-shadow: 0 0;
-    height: 4em;
-  }
-  40% {
-    box-shadow: 0 -2em;
-    height: 5em;
-  }
-}
-@keyframes load1 {
-  0%,
-  80%,
-  100% {
-    box-shadow: 0 0;
-    height: 4em;
-  }
-  40% {
-    box-shadow: 0 -2em;
-    height: 5em;
-  }
+
+@keyframes rotate {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
 }
