--- a/src/Components/UI/Spinner/index.module.css
+++ b/src/Components/UI/Spinner/index.module.css
@@ -1,12 +1,10 @@
 .Spinner {
-	border: 2px solid #e27b36;
+	border: 5px solid #e27b36;
 	box-sizing: border-box;
 	border-radius: 50%;
-	border-top-width: 0px;
-	border-left-width: 0px;
+	border-left-color: white;
 	width: 50px;
 	height: 50px;
-
 	margin: 0 auto;
 	animation: rotate 1s linear infinite;
 }
